force-app/main/default/objects/Asset/fields/CC_Centro_Desplazado__c.field-meta.xml
<CustomField>
    <fullName>CC_Centro_Desplazado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro desplazado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Centro desplazado)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>