force-app/main/default/objects/Asset/fields/CC_Compania_Mantenimiento__c.field-meta.xml
<CustomField>
    <fullName>CC_Compania_Mantenimiento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compañía de mantenimiento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>