force-app/main/default/objects/Asset/fields/CC_Descripcion_Marca__c.field-meta.xml
<CustomField>
    <fullName>CC_Descripcion_Marca__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción de marca</label>
    <length>35</length>
    <type>Text</type>
</CustomField>