force-app/main/default/objects/Asset/fields/CC_Direccion_Centro_Gestor__c.field-meta.xml
<CustomField>
    <fullName>CC_Direccion_Centro_Gestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección del centro gestor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>