force-app/main/default/objects/Asset/fields/CC_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id. externo</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>