force-app/main/default/objects/Asset/fields/CC_Familia_Activo__c.field-meta.xml
<CustomField>
    <fullName>CC_Familia_Activo__c</fullName>
    <label>Familia de activo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>PACC</fullName>
                <label>ACCESORIOS PC/PORT/TAPC</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>ACCESS POINT</label>
            </value>
            <value>
                <fullName>ACT</fullName>
                <label>ACTUALIZADOR</label>
            </value>
            <value>
                <fullName>ATRI</fullName>
                <label>ADAP. TR PER IMPRES</label>
            </value>
            <value>
                <fullName>ADAP</fullName>
                <label>ADAPTADORS - NO PLAQ</label>
            </value>
            <value>
                <fullName>ADPP</fullName>
                <label>ADAPTADORS - PRALS</label>
            </value>
            <value>
                <fullName>AGEL</fullName>
                <label>AGENDA ELECTRÓNICA</label>
            </value>
            <value>
                <fullName>SPKR</fullName>
                <label>ALTAVOZ</label>
            </value>
            <value>
                <fullName>AMPL</fullName>
            </value>
            <value>
                <fullName>MEM</fullName>
                <label>AMPL./PLQ.MEM.</label>
            </value>
            <value>
                <fullName>AURI</fullName>
                <label>AURICULARES</label>
            </value>
            <value>
                <fullName>BANN</fullName>
                <label>BANNER</label>
            </value>
            <value>
                <fullName>BAST</fullName>
                <label>BASTIDOR</label>
            </value>
            <value>
                <fullName>BASL</fullName>
                <label>BASTIDOR LAN OFICINA</label>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>BLIN</fullName>
                <label>BLINDATJE</label>
            </value>
            <value>
                <fullName>BRID</fullName>
                <label>BRIDGE</label>
            </value>
            <value>
                <fullName>CAIX</fullName>
                <label>CAIXER</label>
            </value>
            <value>
                <fullName>CAJE</fullName>
                <label>CAJERO</label>
            </value>
            <value>
                <fullName>PHOT</fullName>
                <label>CAMARAS DIGITALS</label>
            </value>
            <value>
                <fullName>CDRR</fullName>
                <label>CDROM REGRABABLE</label>
            </value>
            <value>
                <fullName>CTRL</fullName>
                <label>CENTRALETES</label>
            </value>
            <value>
                <fullName>CONT</fullName>
                <label>CONTADORES</label>
            </value>
            <value>
                <fullName>CNTR</fullName>
                <label>CONTESTADOR</label>
            </value>
            <value>
                <fullName>CNTL</fullName>
                <label>CONTROLADOR INTEGRADO</label>
            </value>
            <value>
                <fullName>CORP</fullName>
                <label>CORPORATIVA</label>
            </value>
            <value>
                <fullName>DEST</fullName>
                <label>DESTRUCTORA DE DOC.</label>
            </value>
            <value>
                <fullName>DME</fullName>
                <label>DIRECTORI MULTI EMPR</label>
            </value>
            <value>
                <fullName>DISE</fullName>
                <label>DISC EXTERN USB</label>
            </value>
            <value>
                <fullName>DSMO</fullName>
                <label>DISC MAGNETO-OPTIC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>