force-app/main/default/objects/Asset/fields/CC_Filler__c.field-meta.xml
<CustomField>
    <fullName>CC_Filler__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filler</label>
    <length>17</length>
    <type>Text</type>
</CustomField>