force-app/main/default/objects/Asset/fields/CC_Marca__c.field-meta.xml
<CustomField>
    <fullName>CC_Marca__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marca</label>
    <length>4</length>
    <type>Text</type>
</CustomField>