force-app/main/default/objects/Asset/fields/CC_Tipo_Activo__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Activo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de activo</label>
    <length>4</length>
    <type>Text</type>
</CustomField>