force-app/main/default/objects/Asset/fields/HDT_Estado_CI__c.field-meta.xml
<CustomField>
    <fullName>HDT_Estado_CI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado CI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>