force-app/main/default/objects/Asset/recordTypes/CC_Inventario.recordType-meta.xml
<RecordType>
    <fullName>CC_Inventario</fullName>
    <active>true</active>
    <description>Activos del inventario de centros.</description>
    <label>Inventario</label>
</RecordType>