force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CC_Numero_Maquina__c</columns>
    <columns>CC_Familia_Activo__c</columns>
    <columns>CC_Descripcion_Marca__c</columns>
    <columns>CC_Modelo_Activo__c</columns>
    <columns>CC_Fecha_Alta_Centro_Gestor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Inactivo__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Assets</label>
</ListView>